<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".fragments.BrickFiisFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextField1"
        style="@style/TextInputLayoutTheme"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/hit_dividend_mean"
        android:textAlignment="center">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dividendTextInputEditText1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="numberDecimal"
            android:textSize="14sp"
            tools:layout_editor_absoluteX="49dp"
            tools:layout_editor_absoluteY="235dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextField2"
        style="@style/TextInputLayoutTheme"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/custo_de_capital_k"
        app:endIconDrawable="@drawable/ic_info"
        app:endIconTint="@color/black"
        android:textAlignment="center">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/KTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="numberDecimal"
            android:textSize="14sp"
            tools:layout_editor_absoluteX="49dp"
            tools:layout_editor_absoluteY="235dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextField3"
        style="@style/TextInputLayoutTheme"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/crescimento_dos_dividendos"
        android:textAlignment="center">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/GTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="numberDecimal"
            android:textSize="14sp"
            tools:layout_editor_absoluteX="49dp"
            tools:layout_editor_absoluteY="235dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextField4"
        style="@style/TextInputLayoutTheme"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/hit_current_price"
        android:textAlignment="center">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/currentCotationextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="numberDecimal"
            android:textSize="14sp"
            tools:layout_editor_absoluteX="49dp"
            tools:layout_editor_absoluteY="235dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/params_infotextView"
        style="@style/TextTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/info_params_message"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="12sp" />

    <Button
        android:id="@+id/calcFiiButton"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:text="@string/calcButton"
        android:textColor="?attr/colorControlNormal"
        android:textSize="14sp"
        style="?attr/materialButtonOutlinedStyle" />

</LinearLayout>